--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@iconify/vue": "^4.1.2",
+    "@nuxt/icon": "^1.5.6",
     "@nuxtjs/tailwindcss": "^6.12.1",
     "@types/vue": "^2.0.0",
     "@vue/runtime-core": "^3.5.9",
